# ChangeLog for kde-base/kvoctrain
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kvoctrain/ChangeLog,v 1.42 2006/03/22 20:15:41 danarmak Exp $

*kvoctrain-3.5.2 (22 Mar 2006)

  22 Mar 2006; Dan Armak <danarmak@gentoo.org> +kvoctrain-3.5.2.ebuild:
  KDE 3.5.2. Not yet released upstream, and so package.masked for now.

*kvoctrain-3.5.1 (23 Jan 2006)

  23 Jan 2006; Dan Armak <danarmak@gentoo.org> +kvoctrain-3.5.1.ebuild:
  Version 3.5.1. Not yet released upstream, so package.masked for now.

  17 Dec 2005; Markus Rothe <corsair@gentoo.org> kvoctrain-3.5.0.ebuild:
  Added ~ppc64

  12 Dec 2005; Joseph Jezak <josejx@gentoo.org> kvoctrain-3.5.0.ebuild:
  Marked ~ppc.

  10 Dec 2005; Bryan Østergaard <kloeri@gentoo.org kvoctrain-3.4.3.ebuild:
  Stable on alpha.

  10 Dec 2005; Chris White <chriswhite@gentoo.org> kvoctrain-3.4.3.ebuild:
  Marked x86 stable for bug #112842.

  09 Dec 2005; Joseph Jezak <josejx@gentoo.org> kvoctrain-3.4.3.ebuild:
  Marked ppc stable for bug #112842.

  04 Dec 2005; Bryan Østergaard <kloeri@gentoo.org> kvoctrain-3.5.0.ebuild:
  ~alpha keyword.

  29 Nov 2005; Jason Wever <weeve@gentoo.org> kvoctrain-3.5.0.ebuild:
  Added ~sparc keyword.

  25 Nov 2005; Marcus D. Hanwell <cryos@gentoo.org> kvoctrain-3.4.3.ebuild:
  Stable on amd64, bug 112842.

  24 Nov 2005; Markus Rothe <corsair@gentoo.org> kvoctrain-3.4.3.ebuild:
  Stable on ppc64

  24 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  kvoctrain-3.4.3.ebuild:
  Stable on sparc wrt #112842

*kvoctrain-3.5.0 (22 Nov 2005)

  22 Nov 2005; Dan Armak <danarmak@gentoo.org> +kvoctrain-3.5.0.ebuild:
  Ebuilds for KDE 3.5.0 final. It is not yet released, and is package.masked.

*kvoctrain-3.5.0_rc1 (12 Nov 2005)

  12 Nov 2005; Dan Armak <danarmak@gentoo.org> +kvoctrain-3.5.0_rc1.ebuild:
  Ebuild for new version 3.5.0_rc1.

  22 Oct 2005; Mark Loeser <halcy0n@gentoo.org> kvoctrain-3.5_beta1.ebuild,
  kvoctrain-3.5.0_beta2.ebuild: