@@ -1,57 +1,19 @@
 MD5 65e7baa6d3f219fd454ea260c2fd1518 ChangeLog 5518
-RMD160 f47c4f6e8299aae2bc9fe9e39aa8c5009e754521 ChangeLog 5518
-SHA256 9d2ab22519c90fc336e6a00347d81eb3f5c165df9b4158dc10a353c70d3294fd ChangeLog 5518
 MD5 c5fa588b242d6077e2c13bc01f2e0761 files/digest-kvoctrain-3.4.1 208
-RMD160 b75baa2e3a2543b8ef7fe86f2ee7d051fa758344 files/digest-kvoctrain-3.4.1 208
-SHA256 d9d17c20dd4aa47149d5dbee8c627f5a45c4bd91c8c3bc75d59524e5f676afaf files/digest-kvoctrain-3.4.1 208
 MD5 c5fa588b242d6077e2c13bc01f2e0761 files/digest-kvoctrain-3.4.1-r1 208
-RMD160 b75baa2e3a2543b8ef7fe86f2ee7d051fa758344 files/digest-kvoctrain-3.4.1-r1 208
-SHA256 d9d17c20dd4aa47149d5dbee8c627f5a45c4bd91c8c3bc75d59524e5f676afaf files/digest-kvoctrain-3.4.1-r1 208
 MD5 b190e5cce85ed284d453d1a2e85c1e67 files/digest-kvoctrain-3.4.2 282
-RMD160 f2a1268561e24e46368658fbb1e8bc680eeaaf26 files/digest-kvoctrain-3.4.2 282
-SHA256 85080ff055c6575eb61dc8f2c7ec8103cb76db1f0ecb0a11a71487b99d39a8b6 files/digest-kvoctrain-3.4.2 282
 MD5 b190e5cce85ed284d453d1a2e85c1e67 files/digest-kvoctrain-3.4.2-r1 282
-RMD160 f2a1268561e24e46368658fbb1e8bc680eeaaf26 files/digest-kvoctrain-3.4.2-r1 282
-SHA256 85080ff055c6575eb61dc8f2c7ec8103cb76db1f0ecb0a11a71487b99d39a8b6 files/digest-kvoctrain-3.4.2-r1 282
 MD5 e6c244e749eb5eaea2195aab1a2b3f23 files/digest-kvoctrain-3.4.3 67
-RMD160 ae69f787d923fc260a120bd99573c23dbfb6359c files/digest-kvoctrain-3.4.3 67
-SHA256 398079facbd80df46961c1a5cf8861b0254c549679aaf8f55231dfa59a2415f3 files/digest-kvoctrain-3.4.3 67
 MD5 9c4d55683f93bc4ade8253a467f2cdfb files/digest-kvoctrain-3.5.0 67
-RMD160 cd5c61f5b518a68634d8e1609f9def054ca4076e files/digest-kvoctrain-3.5.0 67
-SHA256 53c6a9aa5c5123f085dac625afa451306972c42a8984b82f07aade9ef6d7de32 files/digest-kvoctrain-3.5.0 67
 MD5 f189373524a470a1665a94fe8ba1f935 files/digest-kvoctrain-3.5.1 67
-RMD160 15ef63c56e7473ac57f09886f9a87dcd62fb5940 files/digest-kvoctrain-3.5.1 67
-SHA256 8ff43bdecc2b0a273e26d59bb41fabd2164cd1353ff540bb15b665bc3aa69d5e files/digest-kvoctrain-3.5.1 67
 MD5 ff544adf35a1e206ccc834b16497445e files/digest-kvoctrain-3.5.2 247
-RMD160 63809ef9b895cfbeead9b40aa8f3c5e35f9071d6 files/digest-kvoctrain-3.5.2 247
-SHA256 5a277716eb6b5efee584814aa595214200f062f4ee267e60620cf34558e89b1a files/digest-kvoctrain-3.5.2 247
 MD5 0e82c5810df3b04370188ba13cc50203 files/post-3.4.2-kdeedu.diff 1876
-RMD160 46577e490c2059485578b1daddc0fb0938a1bf61 files/post-3.4.2-kdeedu.diff 1876
-SHA256 6e177d5ad85933f3adbd6ee35232dcdd15d2febea865216296b3d92d10542b86 files/post-3.4.2-kdeedu.diff 1876
 MD5 e7a910820e20283225007708ae5fd24f kvoctrain-3.4.1-r1.ebuild 451
-RMD160 3c22bd0ee03f133c04424653116a93c661c8f9d2 kvoctrain-3.4.1-r1.ebuild 451
-SHA256 741b184fd6c4daa60b1ffa3818a72e25bbae2717fdfdd87f002b44e7ede62f5e kvoctrain-3.4.1-r1.ebuild 451
 MD5 8284d599d20f0383033231206708527e kvoctrain-3.4.1.ebuild 403
-RMD160 1df3753cacf9f30e38d539f6fae3d76b175f559a kvoctrain-3.4.1.ebuild 403
-SHA256 8b9b93c15b18937b4c69d05db927a83118ae97c984df61aa277e56351fbfb450 kvoctrain-3.4.1.ebuild 403
 MD5 a96e66b5dcec36db53b76fc341836f2c kvoctrain-3.4.2-r1.ebuild 455
-RMD160 4ab61c4d90db743fa58ba14f675debf3b619776b kvoctrain-3.4.2-r1.ebuild 455
-SHA256 d5351cce68405e38d3d462fcb5d70b4b53071a923241a3a0518c03d488fa3433 kvoctrain-3.4.2-r1.ebuild 455
 MD5 ca8c48071edcecf35a1214f245c75ddc kvoctrain-3.4.2.ebuild 416
-RMD160 228d9f4717688309327c3154302cc9512c1aadf6 kvoctrain-3.4.2.ebuild 416
-SHA256 7c7f7a6167c9ab831cb437ec66b2e58c42825e62a221f9cc5435e6775eecf106 kvoctrain-3.4.2.ebuild 416
-MD5 ff862e86833c2227f445710fb0c1218c kvoctrain-3.4.3.ebuild 410
-RMD160 9f9af09ec0b5c91e2e556d974c05c42190f75b75 kvoctrain-3.4.3.ebuild 410
-SHA256 90bd22648b452f11ffc68ca0dc3e9574e40741f4d57bbe53fab9f31a8b2a69c1 kvoctrain-3.4.3.ebuild 410
+MD5 e7816070f3780495d6f35c34c7ccc9b8 kvoctrain-3.4.3.ebuild 415
 MD5 3f5b1e0708a0321bba64f15453555512 kvoctrain-3.5.0.ebuild 416
-RMD160 a0d8000f70e7d213b5f72a20b335de4dc8429cc7 kvoctrain-3.5.0.ebuild 416
-SHA256 205d78414954f1143cc02fb0bdd517e511839fb9c02d3da1917da0224bfe4e12 kvoctrain-3.5.0.ebuild 416
 MD5 47e3d091fd38daca06fa5288b2e83109 kvoctrain-3.5.1.ebuild 417
-RMD160 c76569f2e99982c35c70349da9c88593066d83cf kvoctrain-3.5.1.ebuild 417
-SHA256 df706854c8e16192ea50b31e6529b3483e81ee02518cc2e718293397085ba155 kvoctrain-3.5.1.ebuild 417
 MD5 6b1d4d313b4660b8e38fdc49feb0600b kvoctrain-3.5.2.ebuild 417
-RMD160 2d4c595c9b1c0e3013d30a1f00215014c06e98c0 kvoctrain-3.5.2.ebuild 417
-SHA256 b64c392bc4e8cf1379da37a0b3accc408f1208f507234e3d8c7abfe53c08cee9 kvoctrain-3.5.2.ebuild 417
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
-RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
-SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a metadata.xml 156
